--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ package-mode = false
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.116.1"}
 opencv-python = "^4.12.0.88"
+scikit-image = "^0.25.2"
+pyimagej = "^1.7.0"
+jpype1 = "^1.6.0"
+scyjava = "^1.12.1"
+pillow = "^11.3.0"
+scipy = "^1.16.1"
 
 [build-system]
 requires = ["poetry-core"]
