--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,9 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.116.1"}
-opencv-python = "^4.12.0.88"
 scikit-image = "^0.25.2"
-pyimagej = "^1.7.0"
-jpype1 = "^1.6.0"
-scyjava = "^1.12.1"
-pillow = "^11.3.0"
 scipy = "^1.16.1"
+loguru = "^0.7.3"
 
 [build-system]
 requires = ["poetry-core"]
