--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["standard"], version = "^0.116.1"}
 scikit-image = "^0.25.2"
 scipy = "^1.16.1"
 loguru = "^0.7.3"
+psutil = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core"]
