--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ scikit-image = "^0.25.2"
 scipy = "^1.16.1"
 loguru = "^0.7.3"
 psutil = "^7.0.0"
+supabase = "^2.19.0"
+pydantic-settings = "^2.10.1"
 
 [build-system]
 requires = ["poetry-core"]
